# Canvas-Code-Correction

./: .complexipy.yaml  .conversion-summary.md  .dockerignore  .docs-style-checklist.md  .droid  .env.dev  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .python-version  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.org  autorun  canvas_helpers.py  check_requirements  correct-failed-submissions  correct-new-submissions  correct-submissions  coverage.json  delete_submissions.sh  docker-compose.yml  download_submissions.py  flake.nix  grade_submissions.py  hclust.py  index.html  init-config.sh  mkdocs.yml  mkdocs.yml.backup  moss  mossurl2table.sh  package-lock.json  package.json  (+16 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7agp54mgffm9m1wc1kgmkm37pvy18qhf-source  c7g4npzz3xz68adhajynb2fd5v0p2im1-source
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codesee-arch-diagram.yml  deploy-docs.yml  docker-publich.yml  release.yml  test.yml
Week 3-4/code/: config.py  main.py
Week 3-4/code/test/: test_6_1_6.cpp  test_6_2_8.cpp  test_7_1_3.cpp
Week 5-6/code/: config.py  main.py
Week 5-6/code/test/: test_m_11.cpp  test_m_6.cpp  test_m_8.cpp  test_s_2.cpp  test_v_10.cpp  test_v_11.cpp
Week 7-8/code/: main.py  main.sh
Week1-2/code/: config.py  main.py
Week1-2/code/test/: BasicTest.h  TA_3_3.cpp  TA_3_3.h  test_5_10.cpp  test_5_6.cpp  test_5_9.cpp
Week3-4/code/: config.py  main.py
Week3-4/code/test/: test_6_1_1.cpp  test_6_1_2.cpp  test_6_1_4.cpp  test_6_2_1.cpp  test_6_2_2.cpp  test_6_2_6.cpp  test_7_1_2.cpp  test_7_1_4.cpp  test_7_3_4.cpp  test_8_2.cpp  test_9_1.cpp
Week5-6/code/: config.py  main.py
Week5-6/code/test/: test_m_2.cpp  test_m_3.cpp  test_m_9.cpp  test_s_1.cpp  test_s_3.cpp  test_s_5.cpp  test_v_1.cpp  test_v_3.cpp  test_v_6.cpp  test_v_9.cpp
Week7-8/: main.py
Week7-8/code/: config.py  main.py  test.py
Week7-8/code/test/: BasicTest.cpp
containers/canvas/: .env.example  bootstrap.sh  docker-compose.yml
containers/grader/: Dockerfile
current-development/01-roadmap/: index.html
current-development/02-phase-2-migration-plan/: index.html
docs/: CNAME  architecture.md  index.md  phase-2-migration-plan.md  roadmap.md
docs/current-development/: 01-roadmap.md  02-phase-2-migration-plan.md  03-contributing.md
docs/guides/: deploying-tests-to-ccc.md  grader-image.md  prefect-agent.md
docs/platform-setup/: 01-configuring-course.md  02-setting-up-prefect.md  03-scheduling-corrections.md  04-monitoring-results.md  05-deploying-tests-to-ccc.md  06-prefect-agent.md  07-rustfs-storage.md
docs/reference/: 01-architecture.md  02-cli.md  03-configuration.md  04-api-clients.md  05-grader-image.md  06-authoring-grader-tests.md  api-clients.md  configuration.md
docs/stylesheets/: custom.css
docs/tutorial/: 02-prerequisites.md  03-creating-grader-image.md  04-writing-grader-tests.md  index.md
examples/count-submitted-files/: README.md
examples/count-submitted-files/assets/: __init__.py  grader.py  main.sh
legacy/: README.md
legacy/canvas_code_correction/: __init__.py  __main__.py  assets.py  canvas.py  cli.py  config.py  prefect_utils.py
legacy/scripts/: delete_submissions.py  hclust.py  mossurl2table.sh  plagiarism-check.sh  requirements.txt  submissions_unzip.py
legacy_tests/: test_canvas_client.py  test_cli.py  test_config.py  test_flows.py  test_runner_service.py  test_settings.py
platform-setup/01-configuring-course/: index.html
platform-setup/02-setting-up-prefect/: index.html
platform-setup/03-scheduling-corrections/: index.html
platform-setup/04-monitoring-results/: index.html
platform-setup/05-deploying-tests-to-ccc/: index.html
platform-setup/06-prefect-agent/: index.html
platform-setup/07-rustfs-storage/: index.html
reference/01-architecture/: index.html
reference/02-cli/: index.html
reference/03-configuration/: index.html
reference/04-api-clients/: index.html
reference/05-grader-image/: index.html
reference/06-authoring-grader-tests/: index.html
scripts/: generate_coverage_badge.py  rustfs-s3-block.yaml  setup-rustfs.py  setup_rustfs.py  uv_secure_retry.py
search/: search_index.json
src/: .skylos_trace  canvas-code-correction.sh  canvas_helpers.py  check_requirements  config.ini  config2shell  delete_submissions.py  delete_submissions.sh  download_submissions.py  init-config.sh  main.sh  mossurl2table.sh  plagiarism-check.sh  plot_scores.py  process_submissions.sh  requirements.txt  setup-assignment-folders.sh  submission_unzip.py  submissions_correcting.sh  submissions_unzip.py  submissions_unzip.sh  upload_comments.py  upload_grades.py  zip_submission
src/bcolors/: __init__.py
src/canvas_code_correction/: __init__.py  bootstrap.py  canvas.py  cli.py  cli_course.py  cli_system.py  collector.py  config.py  grader_executor.py  result_collector.py  runner.py  runner_service.py  submission_store.py  uploader.py  workspace.py
tests/: AGENTS.md  conftest.py  test_canvas_client.py  test_cli.py  test_config.py  test_flows.py  test_result_collector.py  test_runner_service.py  test_settings.py  test_submission_store.py  test_uploader.py  webhooks_shared.py
tests/e2e/: conftest.py  test_full_flow.py
tests/integration/: conftest.py  test_cli_integration.py
tests/resources/: course_config_s3.json
tests/unit/: test_bootstrap.py  test_cli.py  test_cli_impl_modules.py  test_cli_integration_extended.py  test_cli_live_integration.py  test_cli_setup_course.py  test_cli_structure.py  test_collector.py  test_config.py  test_repo_examples.py  test_runner.py  test_uploader.py  test_workspace.py
tutorial/: index.html
tutorial/02-prerequisites/: index.html
tutorial/03-creating-grader-image/: index.html
tutorial/04-writing-grader-tests/: index.html
week1-2/code/: config.py
week5-6/test/: test_m_1.cpp  test_m_10.cpp  test_m_12.cpp  test_m_4.cpp  test_m_7.cpp  test_s_4.cpp  test_v_12.cpp  test_v_2.cpp  test_v_8.cpp
(+139 files in other folders)
