[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
  "zensical>=0.0.16"
]
dev = [
  "pytest>=9.0.2",
  "pytest-datadir>=1.8.0",
  "pytest-xdist>=3.8.0",
  "pytest-cov>=7.0.0",
  "ipython>=9.9.0",
  "poethepoet>=0.40.0",
  "prek>=0.2.29",
  "ruff>=0.14.13",
  "pyrefly>=0.48.2",
  "commitizen>=4.11.6"
]

[project]
name = "canvas-code-correction"
version = "2.0.0a0"
description = "Framework for orchestrating Canvas assignment corrections with Prefect, Docker, and automated uploads."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Canvas Code Correction Maintainers"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]
dependencies = [
  "prefect[docker]>=3.6.11",
  "prefect-aws>=0.7.4",
  "httpx>=0.28.1",
  "docker>=7.1.0",
  "pydantic>=2.12.5",
  "typer>=0.20.1",
  "python-dotenv>=1.2.1",
  "canvasapi>=3.4.0",
  "boto3>=1.42.19",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocs-glightbox>=0.5.2",
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "PyJWT>=2.10.0",
  "limits>=5.6.0"
]

[project.scripts]
ccc = "canvas_code_correction.cli:app"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"

[tool.poe.tasks]
# Development workflow
fmt = {cmd = "ruff format", help = "Formats Python code using Ruff."}
lint = {cmd = "ruff check --fix", help = "Lints and fixes Python code using Ruff."}
check = {cmd = "pyrefly check", help = "Performs static type checking with Pyrefly."}
test = {cmd = "pytest", help = "Runs project tests using pytest."}
all = {sequence = ["fmt", "lint", "check", "test"], help = "Runs all development checks: format, lint, type check, and tests."}
clean = {cmd = "uvx pyclean . --debris", help = "Clean up Python cache files and test artifacts using pyclean."}
"ci:fmt" = {cmd = "ruff format --check", help = "Checks if code is formatted without making changes (for CI)."}
"ci:lint" = {cmd = "ruff check", help = "Lints code without applying fixes (for CI)."}
# Project-specific tasks
docker-publish = {sequence = ["_docker_build", "_docker_push"], help = "Build and push docker image for base runner"}
serve-docs = {cmd = "zensical serve", help = "Serve documentation locally."}
_docker_build.cmd = "docker build -t jakob1379/canvas-grader:latest . -f containers/grader/Dockerfile"
_docker_push.cmd = "docker push jakob1379/canvas-grader:latest"
prefect.shell = 'prefect server start'
rustfs-setup.shell = "uv run python scripts/setup-rustfs.py"
s3.shell = "mkdir -p workspace && chmod 777 workspace && docker run --rm -p 9000:9000 -p 9001:9001 -v ./workspace:/data -e RUSTFS_ACCESS_KEY=rustfsadmin -e RUSTFS_SECRET_KEY=rustfsadmin rustfs/rustfs:latest /data"

[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=src/canvas_code_correction --cov-report=term-missing --cov-report=json"
testpaths = [
  "tests"
]
markers = [
  "integration: marks tests that exercise live Canvas API",
  "local: marks tests that can run locally without external dependencies",
  "e2e: marks end-to-end tests that require full docker-compose stack"
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["legacy", "scripts"]
extend-exclude = ["scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "ALL"
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["canvas_code_correction"]

[tool.ruff.lint.per-file-ignores]
# Allow assert statements and skip docstrings in tests
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "INP001", "PLR0913", "PLR2004", "ANN001", "ANN201", "ARG001", "FBT001", "PLR0915", "S108", "PLC0415", "N818", "SIM117", "RET504", "SLF001", "S105", "TC003", "BLE001", "TRY300", "T201"]
# Allow print statements in legacy scripts
"legacy/**/*.py" = ["T201"]
# Ignore all linting issues in development scripts
"scripts/**/*.py" = ["ALL"]
