[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "canvas-code-correction[ci,docs,test]",
  "ipython>=9.12.0",
  "poethepoet>=0.42.1",
  "commitizen>=4.13.9"
]

[project]
name = "canvas-code-correction"
version = "2.0.0a0"
description = "Framework for orchestrating Canvas assignment corrections with Prefect, Docker, and automated uploads."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Canvas Code Correction Maintainers"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]
dependencies = [
  "prefect[docker]>=3.6.26",
  "prefect-aws>=0.7.6",
  "docker>=7.1.0",
  "pydantic>=2.12.5",
  "typer>=0.24.1",
  "canvasapi>=3.5.0",
  "boto3>=1.42.70",
  "fastapi>=0.135.2",
  "uvicorn[standard]>=0.44.0",
  "PyJWT>=2.12.0",
  "limits>=5.8.0",
  "requests>=2.33.0",
  "rich>=14.3.3",
  "python-slugify>=8.0.4"
]

[project.optional-dependencies]
docs = [
  "httpx>=0.28.1",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocs-glightbox>=0.5.2",
  "zensical>=0.0.29"
]
test = [
  "pytest>=9.0.3",
  "pytest-datadir>=1.8.0",
  "pytest-xdist>=3.8.0",
  "pytest-cov>=7.1.0"
]
ci = [
  "prek>=0.3.8",
  "pyrefly>=0.58.0",
  "ruff>=0.15.8",
  "skylos>=4.1.3",
  "smokeshow>=0.5.0"
]

[project.scripts]
ccc = "canvas_code_correction.cli:app"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"

[tool.poe.tasks]
# Development workflow
fmt = {cmd = "ruff format", help = "Formats Python code using Ruff."}
lint = {cmd = "ruff check --fix", help = "Lints and fixes Python code using Ruff."}
check = {cmd = "pyrefly check", help = "Performs static type checking with Pyrefly."}
test = {cmd = "pytest", help = "Runs project tests using pytest."}
test-e2e = {sequence = ["_e2e_stack_up", "_test_e2e"], help = "Starts the local e2e services and runs the e2e pytest suite."}
all = {sequence = ["fmt", "lint", "check", "test"], help = "Runs all development checks: format, lint, type check, and tests."}
clean = {cmd = "uvx pyclean . --debris", help = "Clean up Python cache files and test artifacts using pyclean."}
"ci:lint" = {cmd = "ruff check", help = "Lints code without applying fixes (for1 CI)."}
"ci:audit" = {cmd = "uv audit --locked --no-dev --no-extra docs --no-extra test --no-extra ci --preview-features audit", help = "Audits locked runtime dependencies with uv for CI."}
# Project-specific tasks
docker-publish = {sequence = ["_docker_build", "_docker_push"], help = "Build and push docker image for base runner"}
serve-docs = {cmd = "zensical serve", help = "Serve documentation locally."}
_docker_build.cmd = "docker build -t jakob1379/canvas-grader:latest . -f containers/grader/Dockerfile"
_docker_push.cmd = "docker push jakob1379/canvas-grader:latest"
_e2e_stack_up.cmd = "docker compose up --wait -d rustfs postgres redis prefect-server prefect-services"
_test_e2e.cmd = "pytest -m e2e"
generate-cli-docs.shell = "uv run typer src/canvas_code_correction/cli.py utils docs --title \"CLI Reference\" --name ccc --output 'docs/reference/02-cli.md'"
prefect.shell = 'prefect server start'
rustfs-setup.shell = "uv run python scripts/setup_rustfs.py"
s3.shell = "mkdir -p workspace && chmod 777 workspace && docker run --rm -p 9000:9000 -p 9001:9001 -v ./workspace:/data -e RUSTFS_ACCESS_KEY=rustfsadmin -e RUSTFS_SECRET_KEY=rustfsadmin rustfs/rustfs:latest /data"

[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]

[tool.pytest]
addopts = ["--doctest-modules", "--cov=src/canvas_code_correction", "--cov=scripts", "--cov-branch", "--cov-report=term-missing", "--cov-report=json", "-m", "not integration and not e2e"]
testpaths = ["tests"]
markers = [
  "integration: marks tests that exercise live Canvas API",
  "local: marks tests that can run locally without external dependencies",
  "e2e: marks end-to-end tests that require full docker-compose stack"
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["legacy", "scripts"]
extend-exclude = ["scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "ALL"
]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
known-first-party = ["canvas_code_correction"]

[tool.ruff.lint.per-file-ignores]
# Allow assert statements and skip docstrings in tests
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "INP001", "PLR0913", "PLR2004", "ANN001", "ANN201", "ARG001", "FBT001", "PLR0915", "S108", "PLC0415", "N818", "SIM117", "RET504", "SLF001", "S105", "TC003", "TRY300", "T201"]
# Ignore all linting issues in development scripts
"scripts/**/*.py" = ["ALL"]
"src/canvas_code_correction/cli.py" = ["ANN", "ARG", "COM", "D", "E", "F", "FBT", "I", "N", "PLR", "UP"]
"src/canvas_code_correction/cli_course.py" = ["ANN", "ARG", "COM", "D", "E", "F", "FBT", "I", "N", "PLR", "UP"]
"src/canvas_code_correction/cli_system.py" = ["ANN", "ARG", "COM", "D", "E", "F", "FBT", "I", "N", "PLR", "UP"]

[tool.uv.sources]
canvas-code-correction = {workspace = true}

[tool.uv.workspace]
members = [
  "."
]
